Update tests to remove duplicates